Archive2/1e/4da95d4ae31864/output
+ g++-4.8 -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp: In function ‘int main()’:
main.cpp:4:5: error: non-constant condition for static assertion
     static_assert(hello[0] == 'H', "doesn't");
     ^
main.cpp:4:5: error: the value of ‘hello’ is not usable in a constant expression
main.cpp:2:16: note: ‘hello’ was not declared ‘constexpr’
     const char hello[] = "Hello World";
                ^
